--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,20 +1,12 @@
-container_commands:  
-  01makemigrations:
-    command: "python manage.py makemigrations --noinput"
-    leader_only: true
-  02migrate:
-    command: "python manage.py migrate"
-    leader_only: true
-  03_createsu:
-    command: "python manage.py createsu"
-    leader_only: true
+
   
+
 option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: biasweb.settings
     PYTHONPATH: $PYTHONPATH
   aws:elasticbeanstalk:container:python:
-    WSGIPath: biasweb/wsgi.py
+    WSGIPath: biasweb-master/wsgi.py
     
 
     
