--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -6,7 +6,7 @@ option_settings:
     DJANGO_SETTINGS_MODULE: biasweb.settings
     PYTHONPATH: $PYTHONPATH
   aws:elasticbeanstalk:container:python:
-    WSGIPath: biasweb-master/wsgi.py
+    WSGIPath: biasweb/wsgi.py
     
 
     
